rawMongoProgramOutput truncated output causes jstest to fail

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • 29
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      JS test jstests/sharding/txn_two_phase_commit_basic.js depends on being able to read enough server logs in order to pass. However, rawMongoProgramOutput does not return all log messages ever logged (SERVER-50267). We should call clearRawMongoProgramOutput more often.

            Assignee:
            Andrew Witten (Inactive)
            Reporter:
            Andrew Witten (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: