SERVER-66301 use waitForFailpoint command